# b.sakoCSC308

./: Cargo.toml  LICENSE  fifth class.c  first program c.c  fourth class.c  practice 2.c  second class.c  third class.c  x86_64-bootimage-barest.json
.cargo/: config
UsersHPRustBuilds/: .rustc_info.json
UsersHPRustBuilds/debug/.fingerprint/autocfg-b98de4fcf26b8c19/: output-lib-autocfg
UsersHPRustBuilds/debug/.fingerprint/bootloader-417970a27c25558c/: output-build-script-build-script-build
UsersHPRustBuilds/x86_64-unknown-none/debug/.fingerprint/scopeguard-fa38b76df6045abb/: output-lib-scopeguard
UsersHPRustBuilds/x86_64-unknown-none/debug/.fingerprint/volatile-e1156d8bafb1c118/: output-lib-volatile
class projects/project 1/: classwork 2.c  classwork1.c  classwork3.c  classwork4.c
class projects/project 2/: project 2.c
hello_world/src/: greetings.rs  main.rs
hello_world/src/greetings/: french.rs  spanish.rs
os_with_bootloader/: Cargo.toml  build.rs
os_with_bootloader/kernel_with_bootloader/: Cargo.toml
os_with_bootloader/kernel_with_bootloader/src/: interrupts.rs  main.rs  writer.rs  writer2.rs
os_with_bootloader/kernel_with_bootloader/src/writer/: constants.rs
os_with_bootloader/src/: main.rs
src/: build.rs  framebuffer.rs  main.rs
takeaway project/: assignment .c
week 4/: cw1.c
week 6/: classwork.c  practice 1.c
week 7/: practice 1.c  practice 2.c  practice 3.c  practice 4.c  practice 5.c  practice 6.c  practice 7.c  practice 8.c
